# TA1-USB-01-I

./: .gitignore  CMakeLists.txt  README.md  TA1-USB-01-I.pro  WDMTMKv2.cpp  WDMTMKv2.h  mainwindow.cpp  mainwindow.h  resources.qrc  uarttransfer.cpp  uarttransfer.h
src/: MainWindow.cpp  MainWindow.h  mainwindow.cpp  mainwindow.h
src/mil-std-1553b/unix/: ltmk.c  ltmk.h
src/serial/: UartTransfer.cpp  UartTransfer.h  uarttransfer.cpp  uarttransfer.h
ui/: MainWindow.ui
